--- a/AutosportInfo/Base.lproj/Main.storyboard
+++ b/AutosportInfo/Base.lproj/Main.storyboard
@@ -112,31 +112,50 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sjR-jQ-nkf">
-                                                    <rect key="frame" x="140" y="74" width="93" height="84"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-gi-okO">
-                                                    <rect key="frame" x="260.66666666666669" y="74" width="93.333333333333314" height="84"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ew-pa-rER">
-                                                    <rect key="frame" x="20.000000000000007" y="107" width="93.666666666666686" height="75"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sjR-jQ-nkf">
+                                                    <rect key="frame" x="133.66666666666666" y="112" width="106.66666666666666" height="70"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wins" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwu-gh-Ems">
-                                                            <rect key="frame" x="0.0" y="20" width="93.666666666666671" height="20"/>
-                                                            <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hec-QR-e0a">
+                                                            <rect key="frame" x="0.0" y="20" width="106.66666666666667" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2Q-Zh-63w">
-                                                            <rect key="frame" x="0.0" y="48" width="93.666666666666671" height="19"/>
-                                                            <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="19"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoI-Lw-zMI">
+                                                            <rect key="frame" x="0.0" y="45" width="106.66666666666667" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                                    <constraints>
+                                                        <constraint firstItem="hec-QR-e0a" firstAttribute="leading" secondItem="sjR-jQ-nkf" secondAttribute="leading" id="5fb-pC-NAZ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="hec-QR-e0a" secondAttribute="trailing" id="KrH-jA-JCI"/>
+                                                        <constraint firstItem="hec-QR-e0a" firstAttribute="top" secondItem="sjR-jQ-nkf" secondAttribute="top" constant="20" symbolic="YES" id="Scw-vm-Aka"/>
+                                                        <constraint firstItem="DoI-Lw-zMI" firstAttribute="top" secondItem="hec-QR-e0a" secondAttribute="bottom" constant="8" id="UXf-bw-CzE"/>
+                                                        <constraint firstItem="DoI-Lw-zMI" firstAttribute="leading" secondItem="sjR-jQ-nkf" secondAttribute="leading" id="gPK-aD-4fU"/>
+                                                        <constraint firstItem="DoI-Lw-zMI" firstAttribute="bottom" secondItem="sjR-jQ-nkf" secondAttribute="bottomMargin" id="knO-Ts-O7c"/>
+                                                        <constraint firstAttribute="trailing" secondItem="DoI-Lw-zMI" secondAttribute="trailing" id="zZZ-2l-msY"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ew-pa-rER">
+                                                    <rect key="frame" x="8" y="112" width="107" height="70"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wins" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwu-gh-Ems">
+                                                            <rect key="frame" x="0.0" y="20" width="107" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2Q-Zh-63w">
+                                                            <rect key="frame" x="0.0" y="45" width="107" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemGray4Color"/>
                                                     <constraints>
                                                         <constraint firstItem="Lwu-gh-Ems" firstAttribute="top" secondItem="3Ew-pa-rER" secondAttribute="top" constant="20" symbolic="YES" id="BCK-D6-V9O"/>
                                                         <constraint firstItem="Lwu-gh-Ems" firstAttribute="centerX" secondItem="3Ew-pa-rER" secondAttribute="centerX" id="DEa-C1-q4x"/>
@@ -147,24 +166,51 @@
                                                         <constraint firstItem="w2Q-Zh-63w" firstAttribute="leading" secondItem="3Ew-pa-rER" secondAttribute="leading" id="kyN-hg-g07"/>
                                                     </constraints>
                                                 </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-gi-okO">
+                                                    <rect key="frame" x="259" y="111" width="107" height="71"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgh-UK-BgJ">
+                                                            <rect key="frame" x="0.0" y="20" width="107" height="18"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="18"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1N-dZ-x5f">
+                                                            <rect key="frame" x="0.0" y="46" width="107" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                                    <constraints>
+                                                        <constraint firstItem="k1N-dZ-x5f" firstAttribute="leading" secondItem="Ohf-gi-okO" secondAttribute="leading" id="6Yy-Pe-ggP"/>
+                                                        <constraint firstItem="Sgh-UK-BgJ" firstAttribute="top" secondItem="Ohf-gi-okO" secondAttribute="top" constant="20" symbolic="YES" id="GHR-8P-qfV"/>
+                                                        <constraint firstItem="k1N-dZ-x5f" firstAttribute="top" secondItem="Sgh-UK-BgJ" secondAttribute="bottom" constant="8" id="N2m-zR-zL9"/>
+                                                        <constraint firstItem="k1N-dZ-x5f" firstAttribute="bottom" secondItem="Ohf-gi-okO" secondAttribute="bottomMargin" id="R09-Hl-esG"/>
+                                                        <constraint firstItem="Sgh-UK-BgJ" firstAttribute="leading" secondItem="Ohf-gi-okO" secondAttribute="leading" id="TYF-Nf-AHx"/>
+                                                        <constraint firstAttribute="trailing" secondItem="k1N-dZ-x5f" secondAttribute="trailing" id="fnW-2i-OJV"/>
+                                                        <constraint firstItem="Sgh-UK-BgJ" firstAttribute="centerX" secondItem="Ohf-gi-okO" secondAttribute="centerX" id="qYJ-Ev-C7e"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" systemColor="systemGray4Color"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="sjR-jQ-nkf" secondAttribute="bottom" constant="32" id="1qD-CY-Rob"/>
-                                                <constraint firstAttribute="bottom" secondItem="Ohf-gi-okO" secondAttribute="bottom" constant="32" id="6ZP-yM-rGf"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="3Ew-pa-rER" secondAttribute="bottom" id="Dkc-8O-Tti"/>
                                                 <constraint firstItem="z2S-Hs-EMK" firstAttribute="centerX" secondItem="Mxy-KK-20V" secondAttribute="centerX" id="HzW-l0-QBA"/>
-                                                <constraint firstItem="Ohf-gi-okO" firstAttribute="width" secondItem="z2S-Hs-EMK" secondAttribute="width" multiplier="1:4" id="M0o-lR-idL"/>
+                                                <constraint firstItem="sjR-jQ-nkf" firstAttribute="bottom" secondItem="Mxy-KK-20V" secondAttribute="bottomMargin" id="Inv-Qf-BSD"/>
+                                                <constraint firstItem="Ohf-gi-okO" firstAttribute="width" secondItem="z2S-Hs-EMK" secondAttribute="width" multiplier="1:3.5" id="M0o-lR-idL"/>
+                                                <constraint firstItem="Ohf-gi-okO" firstAttribute="bottom" secondItem="Mxy-KK-20V" secondAttribute="bottomMargin" id="R1R-lG-bph"/>
                                                 <constraint firstItem="z2S-Hs-EMK" firstAttribute="top" secondItem="iKI-ZT-1cM" secondAttribute="bottom" constant="8" symbolic="YES" id="Wl0-C3-XkY"/>
                                                 <constraint firstItem="iKI-ZT-1cM" firstAttribute="top" secondItem="Mxy-KK-20V" secondAttribute="top" constant="8" id="c6x-IZ-1CF"/>
-                                                <constraint firstItem="sjR-jQ-nkf" firstAttribute="width" secondItem="z2S-Hs-EMK" secondAttribute="width" multiplier="1:4" id="d6d-Ig-CaG"/>
                                                 <constraint firstItem="z2S-Hs-EMK" firstAttribute="leading" secondItem="Mxy-KK-20V" secondAttribute="leading" id="dKi-5G-P0d"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ohf-gi-okO" secondAttribute="trailing" id="ePT-qn-VI5"/>
                                                 <constraint firstAttribute="trailing" secondItem="iKI-ZT-1cM" secondAttribute="trailing" id="f1A-tT-BRI"/>
-                                                <constraint firstItem="3Ew-pa-rER" firstAttribute="leading" secondItem="Mxy-KK-20V" secondAttribute="leading" constant="20" symbolic="YES" id="g8S-f3-heP"/>
-                                                <constraint firstAttribute="trailing" secondItem="Ohf-gi-okO" secondAttribute="trailing" constant="20" symbolic="YES" id="mQ9-R1-6yr"/>
+                                                <constraint firstItem="sjR-jQ-nkf" firstAttribute="width" secondItem="3Ew-pa-rER" secondAttribute="width" id="oJa-4v-lVg"/>
                                                 <constraint firstItem="sjR-jQ-nkf" firstAttribute="centerX" secondItem="Mxy-KK-20V" secondAttribute="centerX" id="r4y-oM-tV8"/>
+                                                <constraint firstItem="3Ew-pa-rER" firstAttribute="leading" secondItem="Mxy-KK-20V" secondAttribute="leadingMargin" id="rp3-Ud-EDn"/>
                                                 <constraint firstItem="iKI-ZT-1cM" firstAttribute="leading" secondItem="Mxy-KK-20V" secondAttribute="leading" id="rve-0K-9Jl"/>
-                                                <constraint firstItem="3Ew-pa-rER" firstAttribute="width" secondItem="z2S-Hs-EMK" secondAttribute="width" multiplier="1:4" id="wCl-R6-eay"/>
+                                                <constraint firstItem="3Ew-pa-rER" firstAttribute="width" secondItem="z2S-Hs-EMK" secondAttribute="width" multiplier="1:3.5" id="wCl-R6-eay"/>
                                             </constraints>
                                         </view>
                                     </subviews>
