Added Info for TeamTableViewCell

--- a/AutosportInfo/Base.lproj/Main.storyboard
+++ b/AutosportInfo/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sjR-jQ-nkf">
                                                     <rect key="frame" x="133.66666666666666" y="112" width="106.66666666666666" height="70"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hec-QR-e0a">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hec-QR-e0a">
                                                             <rect key="frame" x="0.0" y="20" width="106.66666666666667" height="17"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -169,7 +169,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-gi-okO">
                                                     <rect key="frame" x="259" y="111" width="107" height="71"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgh-UK-BgJ">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgh-UK-BgJ">
                                                             <rect key="frame" x="0.0" y="20" width="107" height="18"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="18"/>
                                                             <nil key="textColor"/>
@@ -224,7 +224,11 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="cellView" destination="Mxy-KK-20V" id="H8d-uH-h0a"/>
+                                    <outlet property="countPoints" destination="DoI-Lw-zMI" id="Qxa-JN-I3Y"/>
+                                    <outlet property="countPosition" destination="k1N-dZ-x5f" id="EgL-Zh-o5E"/>
+                                    <outlet property="countWins" destination="w2Q-Zh-63w" id="uf7-mS-Qiu"/>
                                     <outlet property="teamName" destination="iKI-ZT-1cM" id="Zs0-8s-6Eh"/>
+                                    <outlet property="teamNationalityLabel" destination="z2S-Hs-EMK" id="d6F-WO-pDt"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
