change nav bar title Circuits VC

--- a/AutosportInfo/Base.lproj/Main.storyboard
+++ b/AutosportInfo/Base.lproj/Main.storyboard
@@ -100,28 +100,28 @@
                                             <rect key="frame" x="20" y="5" width="374" height="190"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKI-ZT-1cM">
-                                                    <rect key="frame" x="0.0" y="8" width="374" height="22"/>
+                                                    <rect key="frame" x="0.0" y="8.0000000000000018" width="374" height="25.666666666666671"/>
                                                     <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z2S-Hs-EMK">
-                                                    <rect key="frame" x="0.0" y="38" width="374" height="19"/>
+                                                    <rect key="frame" x="0.0" y="41.666666666666664" width="374" height="22.333333333333336"/>
                                                     <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sjR-jQ-nkf">
-                                                    <rect key="frame" x="133.66666666666666" y="112" width="106.66666666666666" height="70"/>
+                                                    <rect key="frame" x="133.66666666666666" y="106" width="106.66666666666666" height="76"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hec-QR-e0a">
-                                                            <rect key="frame" x="0.0" y="20" width="106.66666666666667" height="17"/>
+                                                            <rect key="frame" x="0.0" y="20" width="106.66666666666667" height="20"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoI-Lw-zMI">
-                                                            <rect key="frame" x="0.0" y="45" width="106.66666666666667" height="17"/>
+                                                            <rect key="frame" x="0.0" y="48" width="106.66666666666667" height="20"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemRedColor"/>
                                                             <nil key="highlightedColor"/>
@@ -139,16 +139,16 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ew-pa-rER">
-                                                    <rect key="frame" x="8" y="112" width="107" height="70"/>
+                                                    <rect key="frame" x="8" y="106" width="107" height="76"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wins" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwu-gh-Ems">
-                                                            <rect key="frame" x="0.0" y="20" width="107" height="17"/>
+                                                            <rect key="frame" x="0.0" y="20" width="107" height="20"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2Q-Zh-63w">
-                                                            <rect key="frame" x="0.0" y="45" width="107" height="17"/>
+                                                            <rect key="frame" x="0.0" y="48" width="107" height="20"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemRedColor"/>
                                                             <nil key="highlightedColor"/>
@@ -166,16 +166,16 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-gi-okO">
-                                                    <rect key="frame" x="259" y="111" width="107" height="71"/>
+                                                    <rect key="frame" x="259" y="105" width="107" height="77"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgh-UK-BgJ">
-                                                            <rect key="frame" x="0.0" y="20" width="107" height="18"/>
+                                                            <rect key="frame" x="0.0" y="20" width="107" height="21"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Regular" family="Formula1" pointSize="18"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1N-dZ-x5f">
-                                                            <rect key="frame" x="0.0" y="46" width="107" height="17"/>
+                                                            <rect key="frame" x="0.0" y="49" width="107" height="20"/>
                                                             <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemRedColor"/>
                                                             <nil key="highlightedColor"/>
@@ -253,7 +253,7 @@
             </objects>
             <point key="canvasLocation" x="1805.7971014492755" y="377.67857142857139"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Circuits-->
         <scene sceneID="98z-Ex-gJe">
             <objects>
                 <tableViewController id="q1a-Jk-vj9" customClass="CircuitsTableViewController" customModule="AutosportInfo" customModuleProvider="target" sceneMemberID="viewController">
@@ -279,8 +279,9 @@
                             <outlet property="delegate" destination="q1a-Jk-vj9" id="dj6-nH-MBu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="lfh-fV-76u"/>
+                    <navigationItem key="navigationItem" title="Circuits" id="lfh-fV-76u"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="E5o-o0-fAB">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="refreshControl:" destination="q1a-Jk-vj9" eventType="valueChanged" id="Z0e-h8-lyf"/>
@@ -408,7 +409,7 @@
                                                 <rect key="frame" x="20" y="143.66666666666669" width="165.66666666666666" height="121.33333333333331"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nationality" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0T3-UU-b3T">
-                                                        <rect key="frame" x="0.0" y="20" width="165.66666666666666" height="19"/>
+                                                        <rect key="frame" x="0.0" y="20" width="165.66666666666666" height="22.333333333333329"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="19"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -434,7 +435,7 @@
                                                 <rect key="frame" x="20" y="273" width="165.66666666666666" height="121.66666666666669"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mjk-Uq-yf9">
-                                                        <rect key="frame" x="0.0" y="20" width="165.66666666666666" height="19"/>
+                                                        <rect key="frame" x="0.0" y="20" width="165.66666666666666" height="22.333333333333329"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="19"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -460,7 +461,7 @@
                                                 <rect key="frame" x="228.33333333333337" y="273" width="165.66666666666663" height="121.66666666666669"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wins" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rRH-pQ-ldi">
-                                                        <rect key="frame" x="8" y="20" width="149.66666666666666" height="19"/>
+                                                        <rect key="frame" x="8" y="20" width="149.66666666666666" height="22.333333333333329"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="19"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -486,7 +487,7 @@
                                                 <rect key="frame" x="228.33333333333337" y="143.66666666666669" width="165.66666666666663" height="121.33333333333331"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="703-gh-b2g" userLabel="Age Of Driver Label">
-                                                        <rect key="frame" x="8" y="20" width="149.66666666666666" height="19"/>
+                                                        <rect key="frame" x="8" y="20" width="149.66666666666666" height="22.333333333333329"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="19"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -512,13 +513,13 @@
                                                 <rect key="frame" x="20" y="14.000000000000007" width="374" height="121.66666666666669"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSm-yJ-MvP">
-                                                        <rect key="frame" x="0.0" y="51" width="374" height="0.0"/>
+                                                        <rect key="frame" x="0.0" y="55" width="374" height="0.0"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="45"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Championship Standing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynn-Gt-1ZV">
-                                                        <rect key="frame" x="0.0" y="20" width="374" height="23"/>
+                                                        <rect key="frame" x="0.0" y="20" width="374" height="27"/>
                                                         <fontDescription key="fontDescription" name="Formula1-Display-Bold" family="Formula1" pointSize="23"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
